* po/*.po:   - update translations from LP (LP: #460547)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-update-manager (1:0.126.6) UNRELEASED; urgency=low
+update-manager (1:0.126.7) UNRELEASED; urgency=low
+
+  * po/*.po:
+    - update translations from LP (LP: #460547)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Oct 2009 15:56:00 +0100
+
+update-manager (1:0.126.6) karmic; urgency=low
 
   * debian/control:
     - updated to point the karmic branch
@@ -10,7 +17,7 @@ update-manager (1:0.126.6) UNRELEASED; urgency=low
   * change unicode "&#x25E6;" to "*" to make translations
     work (LP: #344693) and unfuzzy translations
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Oct 2009 18:02:51 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 23 Oct 2009 14:06:21 +0200
 
 update-manager (1:0.126.5) karmic; urgency=low
 
