--- a/po/sc.po
+++ b/po/sc.po
@@ -1,51 +1,50 @@
-# Marathi translation for update-manager
-# Copyright (c) (c) 2006 Canonical Ltd, and Rosetta Contributors 2006
+# Sardinian translation for update-manager
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the update-manager package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2006.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: update-manager\n"
-"Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-10-23 19:49+0000\n"
-"PO-Revision-Date: 2009-06-29 03:00+0000\n"
-"Last-Translator: Launchpad Translations Administrators "
-"<rosetta@launchpad.net>\n"
-"Language-Team: Marathi <mr@li.org>\n"
+"PO-Revision-Date: 2009-10-25 22:22+0000\n"
+"Last-Translator: Borealis <borealis@tiscali.it>\n"
+"Language-Team: Sardinian <sc@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=2; plural=n!=1;\n"
 "X-Launchpad-Export-Date: 2009-10-26 14:52+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #. TRANSLATORS: download size is 0
 #: ../DistUpgrade/utils.py:278 ../UpdateManager/Core/utils.py:278
 msgid "0 KB"
-msgstr ""
+msgstr "0 KiB"
 
 #. TRANSLATORS: download size of very small updates
 #: ../DistUpgrade/utils.py:281 ../UpdateManager/Core/utils.py:281
 msgid "1 KB"
-msgstr ""
+msgstr "1 KiB"
 
 #. TRANSLATORS: download size of small updates, e.g. "250 KB"
 #: ../DistUpgrade/utils.py:284 ../UpdateManager/Core/utils.py:284
 #, python-format
 msgid "%.0f KB"
-msgstr ""
+msgstr "%.0f KiB"
 
 #. TRANSLATORS: download size of updates, e.g. "2.3 MB"
 #: ../DistUpgrade/utils.py:287 ../UpdateManager/Core/utils.py:287
 #, python-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f MiB"
 
 #. TRANSLATORS: %s is a country
 #: ../DistUpgrade/distro.py:208 ../DistUpgrade/distro.py:423
 #, python-format
 msgid "Server for %s"
-msgstr ""
+msgstr "Server in %s"
 
 #. More than one server is used. Since we don't handle this case
 #. in the user interface we set "custom servers" to true and
@@ -53,11 +52,11 @@ msgstr ""
 #: ../DistUpgrade/distro.py:226 ../DistUpgrade/distro.py:232
 #: ../DistUpgrade/distro.py:248
 msgid "Main server"
-msgstr ""
+msgstr "Server printzipale"
 
 #: ../DistUpgrade/distro.py:252
 msgid "Custom servers"
-msgstr ""
+msgstr "Server personalitzados"
 
 #: ../DistUpgrade/DistUpgradeAptCdrom.py:131
 msgid "Could not calculate sources.list entry"
@@ -68,10 +67,12 @@ msgid ""
 "Unable to locate any package files, perhaps this is not a Ubuntu Disc or the "
 "wrong architecture?"
 msgstr ""
+"Impossibile agatare files de pachetes. Forsis custu no est unu discu de "
+"Ubuntu, o est pro una architetura diferente."
 
 #: ../DistUpgrade/DistUpgradeAptCdrom.py:277
 msgid "Failed to add the CD"
-msgstr ""
+msgstr "Annanta de su CD no arrenèschida."
 
 #: ../DistUpgrade/DistUpgradeAptCdrom.py:278
 #, python-format
@@ -1223,7 +1224,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.ui.h:1
 msgid "    "
-msgstr "    "
+msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.ui.h:2
 msgid ""
