--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,14 @@
-update-manager (1:0.126.7) UNRELEASED; urgency=low
+update-manager (1:0.126.7) karmic-proposed; urgency=low
 
   * po/*.po:
     - update translations from LP (LP: #460547)
   * UpdateManager/Core/DistUpgradeFetcherCore.py:
     - check if running on a system with noexec /tmp and give a propper
       error message (LP: #461744)
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - add missing locale.bindtextdomain() (LP: #460547)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Oct 2009 15:56:00 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Oct 2009 14:11:41 +0100
 
 update-manager (1:0.126.6) karmic; urgency=low
 
