when the server is overloaded and no Release file information can be obtained, show a better error message instead of the bogus "ubuntu-minimal" is missing (LP: #446956)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.126.8) karmic-proposed; urgency=low
+
+  * when the server is overloaded and no Release file information
+    can be obtained, show a better error message instead of the
+    bogus "ubuntu-minimal" is missing (LP: #446956)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 Oct 2009 10:58:36 +0100
+
 update-manager (1:0.126.7) karmic-proposed; urgency=low
 
   * po/*.po:
