--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ update-manager (1:0.111.10) UNRELEASEDjaunty-proposed; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - move the kubuntu-kde4-desktop key dependency transition
       detection to the from_hardy quirks handler (LP: #368459)
+  * UpdateManager/Core/utils.py:
+    - fix url_downloadable() when a proxy needs to be used
+      (LP: #446552)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 29 Apr 2009 15:50:57 +0200
 
