revert r1389, not appopriate (anymore) for jaunty

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,5 @@
-update-manager (1:0.111.10) UNRELEASEDjaunty-proposed; urgency=low
+update-manager (1:0.111.10) jaunty-proposed; urgency=low
 
-  * DistUpgrade/DistUpgradeQuirks.py:
-    - move the kubuntu-kde4-desktop key dependency transition
-      detection to the from_hardy quirks handler (LP: #368459)
   * UpdateManager/Core/utils.py:
     - fix url_downloadable() when a proxy needs to be used
       (LP: #446552)
