* DistUpgrade/DistUpgrade.cfg:   - really stop enabling apport during the upgrade

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.126.9) karmic-proposed; urgency=low
+
+  * DistUpgrade/DistUpgrade.cfg:
+    - really stop enabling apport during the upgrade
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 30 Oct 2009 13:54:08 -0700
+
 update-manager (1:0.126.8) karmic-proposed; urgency=low
 
   * when the server is overloaded and no Release file information
