adding in bug number

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 update-manager (1:0.126.9) karmic-proposed; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg:
-    - really stop enabling apport during the upgrade
+    - really stop enabling apport during the upgrade (LP: #465619)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 30 Oct 2009 13:54:08 -0700
 
