* UpdateManager/UpdateManager.py:   - do not crash if setlocale() fails (LP: #471378)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.126.10) UNRELEASEDkarmic-proposed; urgency=low
+
+  * UpdateManager/UpdateManager.py:
+    - do not crash if setlocale() fails (LP: #471378)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Nov 2009 16:00:23 +0100
+
 update-manager (1:0.126.9) karmic-proposed; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg:
