* UpdateManager/Core/DistUpgradeFetcherCore.py:   - add missing "logging" import (LP: #475941)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.126.10) UNRELEASEDkarmic-proposed; urgency=low
 
   * UpdateManager/UpdateManager.py:
     - do not crash if setlocale() fails (LP: #471378)
+  * UpdateManager/Core/DistUpgradeFetcherCore.py: 
+    - add missing "logging" import (LP: #475941)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Nov 2009 16:00:23 +0100
 
