Fix text direction of update treeview on LTR

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.131.3) lucid; urgency=low
+
+  * Set text direction for update treeview to be always LTR regardless
+    of current language settings (LP: #316171)
+
+ -- Shlomi Loubaton <shlomister@gmail.com>  Thu, 07 Jan 2010 00:01:03 +0200
+
 update-manager (1:0.131.3) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
