--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 update-manager (1:0.133.7) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * check-new-release-gtk: 
     - fix "ask me later" button time
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 24 Mar 2010 19:15:55 +0100
+  [ Brian Murray ]
+  * string fix for 'is aborted now' to 'has aborted'
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 25 Mar 2010 16:43:25 -0700
 
 update-manager (1:0.133.6) lucid; urgency=low
 
