--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ update-manager (1:0.133.7) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - fix 386 kernel check/transition on upgrades from hardy
     - move kubuntu-kde4-desktop transition into its own function
+  * check-new-release-gtk:
+    - use GtkProgress when downloading the release upgrader
 
   [ Dustin Kirkland ]
   * debian/91-release-upgrade: do the release upgrade check with the
