--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.133.7) UNRELEASED; urgency=low
+update-manager (1:0.133.7) lucid; urgency=low
 
   [ Nathan Stratton Treadway ]
   * data/release-upgrades
@@ -26,7 +26,7 @@ update-manager (1:0.133.7) UNRELEASED; urgency=low
   * debian/91-release-upgrade: do the release upgrade check with the
     quiet option to avoid putting debug messages in the MOTD, LP: #548376
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Mar 2010 20:49:56 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Mar 2010 22:13:17 +0100
 
 update-manager (1:0.133.6) lucid; urgency=low
 
