* DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeCache.py:   - do not warn about demoted packages that get removed later anyway

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.133.8) unstable; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeCache.py:
+    - do not warn about demoted packages that get removed later anyway
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
+
 update-manager (1:0.133.7) lucid; urgency=low
 
   [ Nathan Stratton Treadway ]
