--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ update-manager (1:0.133.8) unstable; urgency=low
 
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeCache.py:
     - do not warn about demoted packages that get removed later anyway
+  * DistUpgrade/DistUpgrade.cfg:
+    - remove deskbar-applet and nautilus-cd-burner on upgrade (as discussed
+      with the desktop team)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
 
