--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-update-manager (1:0.133.8) unstable; urgency=low
+update-manager (1:0.133.8) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeCache.py:
     - do not warn about demoted packages that get removed later anyway
-  * DistUpgrade/DistUpgrade.cfg:
-    - remove deskbar-applet and nautilus-cd-burner on upgrade (as discussed
-      with the desktop team)
+  * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:
+    - remove deskbar-applet, and nautilus-cd-burner on ubuntu-desktop
+      upgrade   (as discussed with the desktop team)
+  * DistUpgrade/DistUpgrade.cfg.hardy:
+    - remove tracker on hardy ubuntu-desktop upgrade
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
 
