--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,11 @@ update-manager (1:0.133.8) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:
     - remove deskbar-applet, and nautilus-cd-burner on ubuntu-desktop
       upgrade   (as discussed with the desktop team)
+    - remove notification-daemon in favor of notify-osd in 
+      xubuntu-desktop (LP: #546857)
   * DistUpgrade/DistUpgrade.cfg.hardy:
     - remove tracker on hardy ubuntu-desktop upgrade
+
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
 
