help upgrade by hinting usplash gets removed in favor of plymouth

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,8 @@ update-manager (1:0.133.8) UNRELEASED; urgency=low
       xubuntu-desktop (LP: #546857)
   * DistUpgrade/DistUpgrade.cfg.hardy:
     - remove tracker on hardy ubuntu-desktop upgrade
-
+  * help upgrade by hinting usplash gets removed in favor of 
+    plymouth
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
 
