* UpdateManager/GtkProgress.py:   - remove window title on cache progress (LP: #549936)

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ update-manager (1:0.133.8) UNRELEASED; urgency=low
     - remove tracker on hardy ubuntu-desktop upgrade
   * help upgrade by hinting usplash gets removed in favor of 
     plymouth
+  * UpdateManager/GtkProgress.py:
+    - remove window title on cache progress (LP: #549936)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
 
