* check-new-release-gtk:   - if no ReleaseNotesHtml key is found, do nothing (it means the     meta-release file does not support this client)

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ update-manager (1:0.133.8) UNRELEASED; urgency=low
     plymouth
   * UpdateManager/GtkProgress.py:
     - remove window title on cache progress (LP: #549936)
+  * check-new-release-gtk:
+    - if no ReleaseNotesHtml key is found, do nothing (it means the
+      meta-release file does not support this client)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
 
