* check-new-release-gtk, UpdateManager/Core/MetaRelease.py:   - improve debugging * UpdateManager/Core/utils.py:   - add META_RELEASE_FAKE_CODENAME environment that can be used to     test/force release upgrades * check-new-release-gtk:   - append language parameter to uri   - support --debug

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,14 @@ update-manager (1:0.133.8) UNRELEASED; urgency=low
   * check-new-release-gtk:
     - if no ReleaseNotesHtml key is found, do nothing (it means the
       meta-release file does not support this client)
+  * check-new-release-gtk, UpdateManager/Core/MetaRelease.py: 
+    - improve debugging
+  * UpdateManager/Core/utils.py:
+    - add META_RELEASE_FAKE_CODENAME environment that can be used to
+      test/force release upgrades
+  * check-new-release-gtk:
+    - append language parameter to uri
+    - support --debug
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200
 
