--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ update-manager (1:0.133.8ubuntu1) lucid; urgency=low
 
   * Bump up the amount of /boot space calculated per kernel.  The current
     value appears to undercount by about 260K/kernel. (LP: #132311)
+  * refresh translations from launchpad
 
  -- Barry Warsaw <barry@canonical.com>  Fri, 02 Apr 2010 12:45:11 -0400
 
