* DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:   - add extra protection against video driver removal (LP: #556629)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ update-manager (1:0.133.8ubuntu1) lucid; urgency=low
   * update "10.04" strings to "10.04 LTS" and unfuzzy translations
   * when requesting the release announcement, append ?lang=current_lang
     to the request URI
+  * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:
+    - add extra protection against video driver removal (LP: #556629)
 
  -- Barry Warsaw <barry@canonical.com>  Fri, 02 Apr 2010 12:45:11 -0400
 
