--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.135) UNRELEASED; urgency=low
+
+  * UpdateManager/Core/MyCache.py:
+    - support third party changelogs by using  ArchiveURI() and
+      append a similar structure as changelogs.ubuntu.com uses
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Apr 2010 14:39:40 +0200
+
 update-manager (1:0.134.1) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
