--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ update-manager (1:0.134.1) UNRELEASED; urgency=low
     - stop apparmor before dpkg starts on hardy -> lucid upgrades to
       avoid potentially confusing error messages during the upgrade
       (LP: #559433)
+  * DistUpgrade/DistUpgradeCache.py, DistUpgrade/build-tarball.sh:
+    - include obselte nvidia pkgnames to properly transition old
+      to new drivers (LP: #553369)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Apr 2010 11:39:52 +0200
 
