--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ update-manager (1:0.134.1) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py, DistUpgrade/build-tarball.sh:
     - include obselte nvidia pkgnames to properly transition old
       to new drivers (LP: #553369)
+  * DistUpgrade/DistUpgradeViewText.py:
+    - show packages that will be removed (because they were auto installed)
+      as well (LP: #558438)
+    - fix i18n bug in details output
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Apr 2010 11:39:52 +0200
 
