* DistUpgrade/DistUpgradeMain.py:   - ignore lspci errors

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.134.2) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeMain.py:
+    - ignore lspci errors
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 10:05:30 +0200
+
 update-manager (1:0.134.1) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
