* UpdateManager/Core/MyCache.py:   - simplify url schema for third party changelogs (LP: #45129)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.134.2) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeMain.py:
     - ignore lspci errors
+  * UpdateManager/Core/MyCache.py:
+    - simplify url schema for third party changelogs (LP: #45129)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 10:05:30 +0200
 
