--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,11 @@ update-manager (1:0.134.2) UNRELEASED; urgency=low
     - ignore lspci errors
   * UpdateManager/Core/MyCache.py:
     - simplify url schema for third party changelogs (LP: #45129)
+  * DistUpgrade/DistUpgradeCache.py:
+    - check if the kernel returned from base-installer is downloadable
+      (needed on hardy cdrom only upgrades)
+  * DistUpgrade/DistUpgradeViewNonInteractive.py:
+    - add proper default handling in askYesNoQuestion
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 10:05:30 +0200
 
