* debian/91-release-upgrade:   - use a small script instead of a symlink to ensure that dpkg     treats them as conffiles (LP: #559194)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ update-manager (1:0.134.2) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - check if the kernel returned from base-installer is downloadable
       (needed on hardy cdrom only upgrades)
+  * debian/91-release-upgrade:
+    - use a small script instead of a symlink to ensure that dpkg
+      treats them as conffiles (LP: #559194)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 10:05:30 +0200
 
