* DistUpgrade/DistUpgradeViewGtk.py:   - set empty dialog titles for error/information dialogs (it looks     like glade removed those for some reason from the .ui file)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ update-manager (1:0.134.3) UNRELEASED; urgency=low
   * do-release-upgrade:
     - print when a new release is available in "-q" so that the motd
       is correct (thanks to Dustin Kirkland)
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - set empty dialog titles for error/information dialogs (it looks
+      like glade removed those for some reason from the .ui file)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 18:03:17 +0200
 
