* DistUpgrade/DistUpgradeAufs.py:   - fix crash if aufs (--sandbox mode) is used (LP: #562394)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ update-manager (1:0.134.3) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeViewGtk.py:
     - set empty dialog titles for error/information dialogs (it looks
       like glade removed those for some reason from the .ui file)
+  * DistUpgrade/DistUpgradeAufs.py:
+    - fix crash if aufs (--sandbox mode) is used (LP: #562394)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 18:03:17 +0200
 
