* DistUpgrade/DistUpgradeMain.py:   - fix generation of system state file for non-existing dirs/files     (LP: #561872)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ update-manager (1:0.134.3) UNRELEASED; urgency=low
       like glade removed those for some reason from the .ui file)
   * DistUpgrade/DistUpgradeAufs.py:
     - fix crash if aufs (--sandbox mode) is used (LP: #562394)
+  * DistUpgrade/DistUpgradeMain.py:
+    - fix generation of system state file for non-existing dirs/files
+      (LP: #561872)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 18:03:17 +0200
 
