* update-manager:   - use gettext.install(unicode=True) to avoid breaking with     optparse and ja.po (LP: #557804)

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ update-manager (1:0.134.3) UNRELEASED; urgency=low
     - provide a LIST_TOGGLE_CHECKED column as a workaround for orca
       that does not work with values updated via 
       column_install.set_cell_data_func (LP: #561563)
+  * update-manager:
+    - use gettext.install(unicode=True) to avoid breaking with
+      optparse and ja.po (LP: #557804)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 18:03:17 +0200
 
