--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
-update-manager (1:0.134.7) UNRELEASED; urgency=low
+update-manager (1:0.140) UNRELEASED; urgency=low
 
   * DistUpgrade/removal_blacklist.cfg:
     - remove gobuntu-desktop from the removal blacklist
+  * DistUpgrade/DistUpgradeController.py:
+    - start apport only, do not modify any conffile (all versions
+      of apport we upgrade from support this now)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 11:40:44 +0200
 
