--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ update-manager (1:0.140) UNRELEASED; urgency=low
     - fix crash when format string has the wrong number of arguments
       (LP: #569469)
     - fix minor UI resize issue (LP: #572228)
+  * DistUpgrade/DistUpgrade.cfg:
+    - add ubuntu-netbook
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 11:40:44 +0200
 
