--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ update-manager (1:0.140) UNRELEASED; urgency=low
       (LP: #569469)
     - fix minor UI resize issue (LP: #572228)
   * DistUpgrade/DistUpgrade.cfg:
-    - add ubuntu-netbook
+    - add ubuntu-netbook (LP: #574279)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 11:40:44 +0200
 
