updated to support lucid to maverick upgrades

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ update-manager (1:0.140) UNRELEASED; urgency=low
       if the user should not be allowed to perform a release upgrade
   * UpdateManager/UpdateManager.py, do-release-upgrade:
     - honor "UpgradeBroken" flag and error in this case
+  * updated to support lucid to maverick upgrades
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 11:40:44 +0200
 
