--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.140) UNRELEASED; urgency=low
+update-manager (1:0.140) maverick; urgency=low
 
   * DistUpgrade/removal_blacklist.cfg:
     - remove gobuntu-desktop from the removal blacklist
@@ -18,7 +18,7 @@ update-manager (1:0.140) UNRELEASED; urgency=low
     - honor "UpgradeBroken" flag and error in this case
   * updated to support lucid to maverick upgrades
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 11:40:44 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 10:48:27 +0200
 
 update-manager (1:0.134.6) lucid; urgency=low
 
