* UpdateManager/backend/__init__.py:   - switch to aptdaemon as install backend by default

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.141) UNRELEASED; urgency=low
+
+  * UpdateManager/backend/__init__.py:
+    - switch to aptdaemon as install backend by default
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 11:23:57 +0200
+
 update-manager (1:0.140) maverick; urgency=low
 
   * DistUpgrade/removal_blacklist.cfg:
