--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ update-manager (1:0.141) UNRELEASED; urgency=low
   * UpdateManager/Core/utils.py:
     - fix url_downloadable and add tests, based on the patch from
       Paulo Albuquerque, many thanks (LP: #396187)
+  * UpdateManager/UpdateManager.py:
+    - fix typo (thanks to seb128)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 11:23:57 +0200
 
