* DistUpgrade/mirrors.cfg:   - support upgrades when sources.list uses the new     mirror://mirrors.ubuntu.com/mirrors.txt     uri

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.141) maverick; urgency=low
+update-manager (1:0.141) UNRELEASEDmaverick; urgency=low
 
   * UpdateManager/backend/__init__.py:
     - switch to aptdaemon as install backend by default (unless
@@ -13,8 +13,12 @@ update-manager (1:0.141) maverick; urgency=low
       Paulo Albuquerque, many thanks (LP: #396187)
   * UpdateManager/UpdateManager.py:
     - fix typo (thanks to seb128)
+  * DistUpgrade/mirrors.cfg:
+    - support upgrades when sources.list uses the new
+      mirror://mirrors.ubuntu.com/mirrors.txt 
+      uri
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 May 2010 15:14:01 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 May 2010 15:14:22 +0200
 
 update-manager (1:0.140) maverick; urgency=low
 
