* UpdateManager/GtkProgress.py:   - do not open a cache open progress window, instead show the     progress inline in the window

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ update-manager (1:0.141) UNRELEASEDmaverick; urgency=low
     - support upgrades when sources.list uses the new
       mirror://mirrors.ubuntu.com/mirrors.txt 
       uri
+  * UpdateManager/GtkProgress.py:
+    - do not open a cache open progress window, instead show the
+      progress inline in the window
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 May 2010 15:14:22 +0200
 
