--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-update-manager (1:0.141) UNRELEASEDmaverick; urgency=low
+update-manager (1:0.141) maverick; urgency=low
 
   * UpdateManager/backend/__init__.py:
     - switch to aptdaemon as install backend by default (unless
       the user has UPDATE_MANAGER_FORCE_BACKEND_SYNAPTIC in his
       environment)
+    - merged lp:~glatzor/update-manager/ubuntu-glatzor (many thanks!)
   * DistUpgrade/DistUpgradeController.py:
    - use pockets from DistUpgrade.cfg instead of hard-coding them
   * tests/test_sources_list.py:
