* UpdateManager/Core/MetaRelease.py:   - update for python-apt 0.8 API * check-new-release-gtk:   - remove no longer needed warnings filter

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ update-manager (1:0.142) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * check-new-release-gtk: 
     - fix "ask me later" button time
+  * UpdateManager/Core/MetaRelease.py:
+    - update for python-apt 0.8 API
+  * check-new-release-gtk:
+    - remove no longer needed warnings filter
 
   [ Brian Murray ]
   * string fix for 'is aborted now' to 'has aborted'
