* UpdateManager/Core/MetaRelease.py,   UpdateManager/Core/utils.py:   - update for python-apt 0.8 API, add tests

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ update-manager (1:0.142) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * check-new-release-gtk: 
     - fix "ask me later" button time
-  * UpdateManager/Core/MetaRelease.py:
-    - update for python-apt 0.8 API
+  * UpdateManager/Core/MetaRelease.py,
+    UpdateManager/Core/utils.py:
+    - update for python-apt 0.8 API, add tests
   * check-new-release-gtk:
     - remove no longer needed warnings filter
 
