move python-apt 0.8 updates

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,9 @@ update-manager (1:0.142) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * check-new-release-gtk: 
     - fix "ask me later" button time
-  * UpdateManager/Core/MetaRelease.py,
+  * DistUpgrade/DistUpgradeController.py,
+    DistUpgrade/DistUpgradeCache.py,
+    UpdateManager/Core/MetaRelease.py,
     UpdateManager/Core/utils.py,
     UpdateManager/Core/MyCache.py,
     UpdateManager/Core/UpdateList.py,
