--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142) UNRELEASED; urgency=low
+update-manager (1:0.142) maverick; urgency=low
 
   [ Michael Vogt ]
   * check-new-release-gtk: 
@@ -19,7 +19,7 @@ update-manager (1:0.142) UNRELEASED; urgency=low
   * string fix for 'is aborted now' to 'has aborted'
   * fix in debian/control
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 02 Jun 2010 10:01:21 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Jun 2010 14:32:05 +0200
 
 update-manager (1:0.141) maverick; urgency=low
 
