* UpdateManager/UpdateManager.py:   - Show reboot required dialog inline instead of doing a popup     dialog. When morphing windows land into maverick they can     be used to make the inline information more pretty. But     it should be better than the previous popup dialog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+update-manager (1:0.142.1) maverick; urgency=low
+
+  * UpdateManager/UpdateManager.py:
+    - Show reboot required dialog inline instead of doing a popup
+      dialog. When morphing windows land into maverick they can 
+      be used to make the inline information more pretty. But
+      it should be better than the previous popup dialog
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 10 Jun 2010 16:30:07 +0200
+
 update-manager (1:0.142) maverick; urgency=low
 
   [ Michael Vogt ]
