--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.2) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - use privileged port 1022 instead of 9004 when (optinally) 
+      starting a additional sshd
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Jun 2010 16:27:07 +0200
+
 update-manager (1:0.142.1) maverick; urgency=low
 
   * UpdateManager/UpdateManager.py:
