--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ update-manager (1:0.142.2) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - use privileged port 1022 instead of 9004 when (optinally) 
       starting a additional sshd
+  * UpdateManager/UpdateManager.py: 
+    - fix crash with --no-focus-on-map
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Jun 2010 16:27:07 +0200
 
