* data/release-upgrades:   - set release upgrade policy to "normal" for maverick (instead     of lts)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ update-manager (1:0.142.2) UNRELEASED; urgency=low
       starting a additional sshd
   * UpdateManager/UpdateManager.py: 
     - fix crash with --no-focus-on-map
+  * data/release-upgrades:
+    - set release upgrade policy to "normal" for maverick (instead
+      of lts)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Jun 2010 16:27:07 +0200
 
