--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.2) UNRELEASED; urgency=low
+update-manager (1:0.142.2) maverick; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
     - use privileged port 1022 instead of 9004 when (optinally) 
@@ -9,7 +9,7 @@ update-manager (1:0.142.2) UNRELEASED; urgency=low
     - set release upgrade policy to "normal" for maverick (instead
       of lts)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Jun 2010 16:27:07 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Jun 2010 10:48:47 +0200
 
 update-manager (1:0.142.1) maverick; urgency=low
 
