Add --sandbox to update-manager(8)

--- a/data/update-manager.8
+++ b/data/update-manager.8
@@ -38,6 +38,9 @@ Try to run a dist-upgrade
 .TP
 \fB-\-dist-upgrade\fR
 Try to run a dist-upgrade
+.TP
+\fB-s\fR, \fB\-\-sandbox\fR
+Test the upgrade with a sandbox aufs overlay, without changing the filesystem.
 
 .SH ACTIONS PERFORMED DURING AN UPGRADE TO A NEW VERSION
 * eventually reinstall the package ubuntu-desktop
