--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.3) UNRELEASED; urgency=low
+update-manager (1:0.142.3) maverick; urgency=low
 
   * merged lp:~and471/update-manager/fix-bug-386196, many thanks
   * DistUpgrade/DistUpgradeView*.py:
@@ -13,7 +13,7 @@ update-manager (1:0.142.3) UNRELEASED; urgency=low
     - disconnect the model before adding lots of new items, this
       speeds up the building of the view massively
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jun 2010 19:34:38 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Jul 2010 10:07:34 +0200
 
 update-manager (1:0.142.2) maverick; urgency=low
 
