* DistUpgrade/DistUpgradeView.py:   - fix missing initializer (python0.8 api releated)     LP: #604250

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.4) maverick; urgency=low
+
+  * DistUpgrade/DistUpgradeView.py:
+    - fix missing initializer (python0.8 api releated)
+      LP: #604250
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Jul 2010 16:18:54 +0200
+
 update-manager (1:0.142.3) maverick; urgency=low
 
   * merged lp:~and471/update-manager/fix-bug-386196, many thanks
