more python-apt 0.8 porting

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.142.5) UNRELEASED; urgency=low
+
+  * more python-apt 0.8 porting
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Jul 2010 15:18:20 +0200
+
 update-manager (1:0.142.4) maverick; urgency=low
 
   * DistUpgrade/DistUpgradeView.py:
