less updates to the progressbar

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 update-manager (1:0.142.5) UNRELEASED; urgency=low
 
   * more python-apt 0.8 porting
+  * less updates to the progressbar
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Jul 2010 15:18:20 +0200
 
