--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ update-manager (1:0.142.5) UNRELEASED; urgency=low
   * more python-apt 0.8 porting
   * less updates to the progressbar
 
+  [ Mohamed Amine IL Idrissi ]
+  * Implemented battery and network alerts directly in the main window.
+    LP: #484249, #426708, #426710
+
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Jul 2010 15:18:20 +0200
 
 update-manager (1:0.142.4) maverick; urgency=low
