--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ update-manager (1:0.142.5) UNRELEASED; urgency=low
 
   * more python-apt 0.8 porting
   * less updates to the progressbar
+  * DistUpgrade/DistUpgradeViewNonInteractive.py:
+    - fix crash in non-interactive upgrader when a conffile prompt
+      is detected
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Jul 2010 15:18:20 +0200
 
