--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.5) UNRELEASED; urgency=low
+update-manager (1:0.142.5) maverick; urgency=low
 
   * more python-apt 0.8 porting
   * less updates to the progressbar
@@ -6,7 +6,7 @@ update-manager (1:0.142.5) UNRELEASED; urgency=low
     - fix crash in non-interactive upgrader when a conffile prompt
       is detected
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Jul 2010 15:18:20 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 05 Aug 2010 22:49:07 +0200
 
 update-manager (1:0.142.4) maverick; urgency=low
 
