* UpdateManager/Core/MyCache.py:   - support looking for the changelog by source version     (and add tests)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.6) UNRELEASED; urgency=low
+
+  * UpdateManager/Core/MyCache.py:
+    - support looking for the changelog by source version
+      (and add tests)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Aug 2010 14:21:39 +0200
+
 update-manager (1:0.142.5) maverick; urgency=low
 
   * more python-apt 0.8 porting
