* UpdateManager/Core/utils.py:   - fix crash when reading the synaptic config (LP: #614170)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ update-manager (1:0.142.6) UNRELEASED; urgency=low
   * UpdateManager/Core/MyCache.py:
     - support looking for the changelog by source version
       (and add tests)
+  * UpdateManager/Core/utils.py:
+    - fix crash when reading the synaptic config (LP: #614170)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Aug 2010 14:21:39 +0200
 
