--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.6) UNRELEASED; urgency=low
+update-manager (1:0.142.6) maverick; urgency=low
 
   [ Mohamed Amine IL Idrissi ]
   * Implemented battery and network alerts directly in the main window.
@@ -11,7 +11,7 @@ update-manager (1:0.142.6) UNRELEASED; urgency=low
   * UpdateManager/Core/utils.py:
     - fix crash when reading the synaptic config (LP: #614170)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Aug 2010 14:21:39 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Aug 2010 15:16:27 +0200
 
 update-manager (1:0.142.5) maverick; urgency=low
 
