--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.7) UNRELEASED; urgency=low
+  
+  [ Mohamed Amine IL Idrissi ]
+  * Cache is no longer initialized when an operation is not authorized.
+    LP: #394608
+
+ -- Mohamed Amine IL Idrissi <ilidrissiamine@gmail.com> Tue, 10 Aug 2010 15:32:37 +0000
+
 update-manager (1:0.142.6) maverick; urgency=low
 
   [ Mohamed Amine IL Idrissi ]
