--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,10 @@ update-manager (1:0.142.7) UNRELEASED; urgency=low
     - catch network error when fetching 3rd party changelogs 
       (LP: #565896)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Aug 2010 20:16:55 +0200
+  [ Brian Murray ]
+  * UpdateManager/UpdateManager.py: grammar fix
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 10 Aug 2010 16:59:45 -0700
 
 update-manager (1:0.142.6) maverick; urgency=low
 
