--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.7) UNRELEASED; urgency=low
+update-manager (1:0.142.7) maverick; urgency=low
   
   [ Mohamed Amine IL Idrissi ]
   * Cache is no 
@@ -20,7 +20,7 @@ update-manager (1:0.142.7) UNRELEASED; urgency=low
   [ Brian Murray ]
   * UpdateManager/UpdateManager.py: grammar fix
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Aug 2010 08:48:41 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Aug 2010 09:04:47 +0200
 
 update-manager (1:0.142.6) maverick; urgency=low
 
