DistUpgrade/DistUpgradeView.py: There won't be two spaces in FuzzyTimeToStr when days or hours are > 0 and hours or minutes are equal to 0 (LP: #288912)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.8) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeView.py: There won't be two spaces in
+    FuzzyTimeToStr when days or hours are > 0 and hours or minutes are
+    equal to 0 (LP: #288912)
+
+ -- Mohamed Amine IL Idrissi <ilidrissiamine@gmail.com>  Wed, 11 Aug 2010 18:03:33 +0000
+
 update-manager (1:0.142.7) maverick; urgency=low
   
   [ Mohamed Amine IL Idrissi ]
