* UpdateManager/UpdateManager.py:   - when NM thinks we have no network, do not disable the buttons     because for dialup users NM is frequently wrong and does not     get that there is a network-connection (thanks to "gambs")

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.142.8) UNRELEASED; urgency=low
+
+  * UpdateManager/UpdateManager.py:
+    - when NM thinks we have no network, do not disable the buttons
+      because for dialup users NM is frequently wrong and does not 
+      get that there is a network-connection (thanks to "gambs")
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 12 Aug 2010 09:13:57 +0200
+
 update-manager (1:0.142.7) maverick; urgency=low
   
   [ Mohamed Amine IL Idrissi ]
