--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,13 @@
-update-manager (1:0.142.8) UNRELEASED; urgency=low
+update-manager (1:0.142.8) maverick; urgency=low
 
+  * UpdateManager/Core/utils.py:
+    - fix typo (LP: #615923)
   * UpdateManager/UpdateManager.py:
     - when NM thinks we have no network, do not disable the buttons
       because for dialup users NM is frequently wrong and does not 
       get that there is a network-connection (thanks to "gambs")
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 12 Aug 2010 09:13:57 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 12 Aug 2010 11:53:47 +0200
 
 update-manager (1:0.142.7) maverick; urgency=low
   
