UpdateManager/UpdateManager.py: Changed the whitespace place to not confuse translators, many thanks Milo Casagrande (LP: #621373)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.142.9) maverick; urgency=low
+
+  * UpdateManager/UpdateManager.py: Changed the whitespace place to not
+    confuse translators, many thanks Milo Casagrande (LP: #621373)
+
+ -- Mohamed Amine IL Idrissi <ilidrissiamine@gmail.com>  Mon, 23 Aug 2010 18:00:54 +0000
+
 update-manager (1:0.142.8) maverick; urgency=low
 
   * UpdateManager/Core/utils.py:
