--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,12 @@ update-manager (1:0.142.9) maverick; urgency=low
   * DistUpgrade/DistUpgradeView.py: There won't be two spaces in
     FuzzyTimeToStr when days or hours are > 0 and hours or minutes are
     equal to 0 (LP: #288912)
+  
+  [ Michael Vogt ]
+  * UpdateManager/UpdateManager.py, data/glade/UpdateManager.ui:
+    - fix label wraping for label_downsize
 
- -- Mohamed Amine IL Idrissi <ilidrissiamine@gmail.com>  Mon, 23 Aug 2010 18:00:54 +0000
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 25 Aug 2010 11:17:00 +0200
 
 update-manager (1:0.142.8) maverick; urgency=low
 
