--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ update-manager (1:0.142.9) maverick; urgency=low
     equal to 0 (LP: #288912)
   
   [ Michael Vogt ]
+  * remove the seperate demotions dialog and move it into the 
+    "Confirm changes" step
+  * use a treeview instead of a list to show the details of the
+    changes in the gtk frontend
   * UpdateManager/UpdateManager.py, data/glade/UpdateManager.ui:
     - fix label wraping for label_downsize
 
