* UpdateManager/UpdateManager.py:   - when NM thinks we have no network, do not disable the     install button because for dialup users NM is frequently wrong     and does not get that there is a network-connection (LP: #624894)     (thanks to Mohamed Amine IL Idrissi)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+update-manager (1:0.142.10) maverick; urgency=low
+
+  * UpdateManager/UpdateManager.py:
+    - when NM thinks we have no network, do not disable the
+      install button because for dialup users NM is frequently wrong
+      and does not get that there is a network-connection (LP: #624894)
+      (thanks to Mohamed Amine IL Idrissi)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 27 Aug 2010 10:54:42 +0200
+
 update-manager (1:0.142.9) maverick; urgency=low
 
   [ Mohamed Amine IL Idrissi ]
