* DistUpgrade/DistUpgradeController.py:   - fix incorrect paramter passed to confirmChanges in doPostUpgrade     (thanks to Jonathan Riddel, LP: #624599)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.11) maverick; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - fix incorrect paramter passed to confirmChanges in doPostUpgrade
+      (thanks to Jonathan Riddel, LP: #624599)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 27 Aug 2010 11:26:47 +0200
+
 update-manager (1:0.142.10) maverick; urgency=low
 
   * UpdateManager/UpdateManager.py:
