--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.142.12) maverick; urgency=low
+
+  * DistUpgrade/DevelReleaseAnnouncement:
+    - updated for beta
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 01 Sep 2010 09:14:59 +0200
+
 update-manager (1:0.142.11) maverick; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
