* DistUpgrade/DistUpgradeView.py:   - only show demotions if we have at least one

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.142.13) maverick; urgency=low
+
+  * DistUpgrade/DistUpgradeView.py:
+    - only show demotions if we have at least one
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 02 Sep 2010 09:37:39 +0200
+
 update-manager (1:0.142.12) maverick; urgency=low
 
   * DistUpgrade/DevelReleaseAnnouncement:
