* DistUpgrade/mirrors.cfg:   - add extras.ubuntu.com to known mirrors

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.142.14) UNRELEASEDmaverick; urgency=low
+
+  * DistUpgrade/mirrors.cfg:
+    - add extras.ubuntu.com to known mirrors
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Sep 2010 16:02:29 +0200
+
 update-manager (1:0.142.13) maverick; urgency=low
 
   * DistUpgrade/DistUpgradeView.py:
