* DistUpgrade/DistUpgradeQuirks.py:   - add extras.ubuntu.com on upgrade

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.142.14) UNRELEASEDmaverick; urgency=low
 
   * DistUpgrade/mirrors.cfg:
     - add extras.ubuntu.com to known mirrors
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - add extras.ubuntu.com on upgrade
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Sep 2010 16:02:29 +0200
 
