fix create-base-image.py script

--- a/AutoUpgradeTester/jeos/README
+++ b/AutoUpgradeTester/jeos/README
@@ -1,3 +1,10 @@
+Create the images by simply running 
+$ ./create-base-image.sh maverick 
+(or whatever distroibution release you want to create)
+
+
+===== old info below ====
+
 Images created with:
 
 First create a ssh key:
