Fix invocation of gksu, use the correct .desktop file. Fixes LP: #640906

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 update-manager (1:0.142.14) UNRELEASEDmaverick; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/mirrors.cfg:
     - add extras.ubuntu.com to known mirrors
   * DistUpgrade/DistUpgradeQuirks.py:
     - add extras.ubuntu.com on upgrade
+  
+  [ Gabor Kelemen ]
+  * Fix invocation of gksu, use the correct .desktop file.
+    Fixes LP: #640906
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Sep 2010 16:02:29 +0200
 
